--- a/TrajectoryGenerator.ipynb
+++ b/TrajectoryGenerator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "e08386b1-19fa-4244-b77d-cf89066877b1",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "id": "225bd411-caeb-4a8f-8c34-cc4d4487027f",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 3,
    "id": "07722851",
    "metadata": {},
    "outputs": [
@@ -362,35 +362,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "0b06f482",
+   "execution_count": 4,
+   "id": "01cad707",
    "metadata": {},
    "outputs": [],
    "source": [
-    "LocationNo = 2"
+    "# April 10, 2024\n",
+    "MotorLocations3880_Orig = [None]*1\n",
+    "MotorLocations3880_Orig[0] = np.array([[0,0, 0], [-49.26, 20.49, 1], [-101.76, 2, 2-0.01], [-104.76, -153, -3.01],[-49.76,-172.51, -3.51],[-1.26, -151, -3.5]]) # Steering set for test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "id": "204a2ed1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "focusLocationFromA = np.array([[-41.78,-76.77,-21.5]]) # Test locaton at the center of the lanmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "0b06f482",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LocationNo = 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "a9b9809a",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'MotorLocations3880_Orig' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Shirshak\\Research\\BabelBrain\\BabelBrain\\TrajectoryGenerator.ipynb Cell 16\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Shirshak/Research/BabelBrain/BabelBrain/TrajectoryGenerator.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m MotorLocations3880 \u001b[39m=\u001b[39m MotorLocations3880_Orig[LocationNo] \u001b[39m-\u001b[39m focusLocationFromA\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Shirshak/Research/BabelBrain/BabelBrain/TrajectoryGenerator.ipynb#X21sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mprint\u001b[39m(MotorLocations3880)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'MotorLocations3880_Orig' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 41.78  76.77  21.5 ]\n",
+      " [ -7.48  97.26  22.5 ]\n",
+      " [-59.98  78.77  23.49]\n",
+      " [-62.98 -76.23  18.49]\n",
+      " [ -7.98 -95.74  17.99]\n",
+      " [ 40.52 -74.23  18.  ]]\n"
      ]
     }
    ],
    "source": [
     "MotorLocations3880 = MotorLocations3880_Orig[LocationNo] - focusLocationFromA\n",
     "print(MotorLocations3880)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6a054de2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 41.78  76.77  21.5 ]\n",
+      " [ -7.48  97.26  22.5 ]\n",
+      " [-59.98  78.77  23.49]\n",
+      " [-62.98 -76.23  18.49]\n",
+      " [ -7.98 -95.74  17.99]\n",
+      " [ 40.52 -74.23  18.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "MotorLocations3880 = MotorLocations3880_Orig[LocationNo] - focusLocationFromA\n",
+    "MotorLocations = MotorLocations3880\n",
+    "CTLocations = CTLocations3880_2\n",
+    "print(MotorLocations3880)"
    ]
   },
   {
@@ -421,13 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "id": "395e6a6b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "folder = r'D:\\Shirshak\\Research\\BabelBrain\\Tests\\4000'\n",
-    "trajName = 'traj_location_'+str(LocationNo)+'.txt'\n",
+    "folder = r'D:\\Shirshak\\Research\\BabelBrain\\Tests\\3880'\n",
+    "date = 'April_10_2024'\n",
+    "trajName = 'traj_location_'+date+'_'+str(LocationNo)+'.txt'\n",
     "createTrajectory(CTLandmarks=CTLocations,MotorLandmarks=MotorLocations,folder=folder+os.sep, trajName=trajName)"
    ]
   },
