Bug fix for sim grid.

--- a/TrajectoryGenerator.ipynb
+++ b/TrajectoryGenerator.ipynb
@@ -269,6 +269,22 @@
     "        [0, 0, 0, 1]])\n",
     "    return itk_transform\n",
     "\n",
+    "def read_itk_affine_transform(filename):\n",
+    "    with open(filename) as f:\n",
+    "        tfm_file_lines = f.readlines()\n",
+    "    # parse the transform parameters\n",
+    "    match = re.match(\"Transform: AffineTransform_[a-z]+_([0-9]+)_([0-9]+)\", tfm_file_lines[2])\n",
+    "    if not match or match.group(1) != '3' or match.group(2) != '3':\n",
+    "        raise ValueError(f\"{filename} is not an ITK 3D affine transform file\")\n",
+    "    p = np.array( tfm_file_lines[3].split()[1:], dtype=np.float64 )\n",
+    "    # assemble 4x4 matrix from ITK transform parameters\n",
+    "    itk_transform = np.array([\n",
+    "        [p[0], p[1], p[2], p[9]],\n",
+    "        [p[3], p[4], p[5], p[10]],\n",
+    "        [p[6], p[7], p[8], p[11]],\n",
+    "        [0, 0, 0, 1]])\n",
+    "    return itk_transform\n",
+    "\n",
     "def perpendicular_vector(v):\n",
     "    if v[1] == 0 and v[2] == 0:\n",
     "        if v[0] == 0:\n",
